--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "clsx": "^1.2.1",
+    "effector": "^22.3.0",
+    "effector-react": "^22.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.0",
-    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
